// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdvertsPage > should dispatch adverts list 1`] = `
<div>
  <nav
    class="wrapper mb-8"
  >
    <div
      class="divide-b"
    >
      <ul
        class="flex flex-col gap-4 py-4 sm:flex-row sm:items-center"
      >
        <li>
          <div
            class="popover flex items-center"
          >
            <button
              class="nav-item"
            >
              <span
                class="material-symbols-outlined"
              >
                filter_list
              </span>
              <span
                class="-mb-0.75"
              >
                Filters
              </span>
            </button>
            <div
              class="popover-menu invisible origin-top-left -translate-y-2 scale-100 transform opacity-0 transition"
            >
              <div
                class="bg-background absolute -left-18 mt-6 w-72 origin-top-left rounded-lg border border-black/15 p-4 shadow-md outline-none sm:w-98 dark:border-white/15"
                role="menu"
                tabindex="-1"
              >
                <form>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="name"
                        maxlength="80"
                        name="name"
                        placeholder="Name"
                        type="search"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="name"
                      >
                        Name
                      </label>
                    </div>
                  </div>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="min-price"
                        max="99999.99"
                        min="1.00"
                        name="price"
                        placeholder="Minimum price"
                        type="number"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="min-price"
                      >
                        Minimum price
                      </label>
                    </div>
                  </div>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="max-price"
                        max="99999.99"
                        min="1.00"
                        name="price"
                        placeholder="Maximum price"
                        type="number"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="max-price"
                      >
                        Maximum price
                      </label>
                    </div>
                  </div>
                  <div>
                    <p
                      class="mb-2 font-medium"
                    >
                      Tags:
                    </p>
                    <div
                      class="flex flex-wrap gap-x-3 gap-y-0.5"
                    />
                  </div>
                  <div>
                    <p
                      class="mb-2 font-medium"
                    >
                      Advert Type:
                    </p>
                    <div
                      class="flex flex-wrap gap-2"
                    >
                      <div
                        class="has-checked:border-primary has-checked:bg-primary bg-background mb-4 flex items-center rounded-full border border-neutral-500/15 p-2 transition has-checked:shadow-sm"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded-full border border-neutral-500/15 transition-all"
                            id="type-buy"
                            name="type"
                            type="radio"
                            value="buy"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="-mb-1 ml-2 cursor-pointer pe-2 text-sm text-neutral-500/30 transition-colors select-none peer-has-checked:text-white"
                          for="type-buy"
                        >
                          Want to Buy
                        </label>
                      </div>
                      <div
                        class="has-checked:border-primary has-checked:bg-primary bg-background mb-4 flex items-center rounded-full border border-neutral-500/15 p-2 transition has-checked:shadow-sm"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded-full border border-neutral-500/15 transition-all"
                            id="type-sell"
                            name="type"
                            type="radio"
                            value="sell"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="-mb-1 ml-2 cursor-pointer pe-2 text-sm text-neutral-500/30 transition-colors select-none peer-has-checked:text-white"
                          for="type-sell"
                        >
                          Want to Sell
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex justify-end"
                  >
                    <button
                      class="btn btn-destructive"
                      type="reset"
                    >
                      <span
                        class="material-symbols-outlined"
                      >
                        reset_settings
                      </span>
                      <span
                        class="-mb-0.75"
                      >
                        Reset filters
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </li>
        <li>
          <a
            aria-label="nav-filters"
            class="nav-item"
            data-discover="true"
            href="/adverts/new"
          >
            <span
              class="material-symbols-outlined"
            >
              add
            </span>
            <span
              class="-mb-0.75"
            >
              New Advert
            </span>
          </a>
        </li>
        <li>
          <a
            class="nav-item"
            href="http://localhost:3001/swagger/"
            target="_blank"
          >
            <span
              class="material-symbols-outlined"
            >
              api
            </span>
            <span
              class="-mb-0.75"
            >
              API Documentation
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    class="wrapper only:mt-8"
  >
    <h2>
      Latest Adverts
    </h2>
    <ul
      class="mx-auto grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3"
    >
      <li>
        <a
          data-discover="true"
          href="/adverts/1"
        >
          <div
            class="group border-primary/15 bg-background overflow-hidden rounded-lg border transition hover:scale-105 hover:shadow-xl"
          >
            <div
              class="relative"
            >
              <img
                alt="Product image"
                class="h-60 w-full object-cover transition-transform"
                src="/src/assets/placeholder.webp"
              />
              <div
                class="absolute top-3 right-3"
              >
                <span
                  class="ads-type"
                >
                  WANT TO BUY
                </span>
              </div>
            </div>
            <div
              class="p-5"
            >
              <span
                class="mb-2 flex text-lg font-bold text-gray-900 dark:text-gray-100"
              >
                advert 1
              </span>
              <div
                class="mb-2 flex flex-wrap gap-2"
              />
              <div
                class="flex items-center justify-between"
              >
                <h3
                  class="!m-0 text-lg font-semibold text-teal-600"
                >
                  $
                  0.00
                </h3>
              </div>
            </div>
          </div>
        </a>
      </li>
    </ul>
  </div>
  <div
    class="fixed top-11.5 left-1/2 z-50 -translate-x-1/2"
  />
</div>
`;

exports[`AdvertsPage > should dispatch alert component with error message 1`] = `
<div>
  <nav
    class="wrapper mb-8"
  >
    <div
      class="divide-b"
    >
      <ul
        class="flex flex-col gap-4 py-4 sm:flex-row sm:items-center"
      >
        <li>
          <div
            class="popover flex items-center"
          >
            <button
              class="nav-item"
            >
              <span
                class="material-symbols-outlined"
              >
                filter_list
              </span>
              <span
                class="-mb-0.75"
              >
                Filters
              </span>
            </button>
            <div
              class="popover-menu invisible origin-top-left -translate-y-2 scale-100 transform opacity-0 transition"
            >
              <div
                class="bg-background absolute -left-18 mt-6 w-72 origin-top-left rounded-lg border border-black/15 p-4 shadow-md outline-none sm:w-98 dark:border-white/15"
                role="menu"
                tabindex="-1"
              >
                <form>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="name"
                        maxlength="80"
                        name="name"
                        placeholder="Name"
                        type="search"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="name"
                      >
                        Name
                      </label>
                    </div>
                  </div>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="min-price"
                        max="99999.99"
                        min="1.00"
                        name="price"
                        placeholder="Minimum price"
                        type="number"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="min-price"
                      >
                        Minimum price
                      </label>
                    </div>
                  </div>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="max-price"
                        max="99999.99"
                        min="1.00"
                        name="price"
                        placeholder="Maximum price"
                        type="number"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="max-price"
                      >
                        Maximum price
                      </label>
                    </div>
                  </div>
                  <div>
                    <p
                      class="mb-2 font-medium"
                    >
                      Tags:
                    </p>
                    <div
                      class="flex flex-wrap gap-x-3 gap-y-0.5"
                    />
                  </div>
                  <div>
                    <p
                      class="mb-2 font-medium"
                    >
                      Advert Type:
                    </p>
                    <div
                      class="flex flex-wrap gap-2"
                    >
                      <div
                        class="has-checked:border-primary has-checked:bg-primary bg-background mb-4 flex items-center rounded-full border border-neutral-500/15 p-2 transition has-checked:shadow-sm"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded-full border border-neutral-500/15 transition-all"
                            id="type-buy"
                            name="type"
                            type="radio"
                            value="buy"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="-mb-1 ml-2 cursor-pointer pe-2 text-sm text-neutral-500/30 transition-colors select-none peer-has-checked:text-white"
                          for="type-buy"
                        >
                          Want to Buy
                        </label>
                      </div>
                      <div
                        class="has-checked:border-primary has-checked:bg-primary bg-background mb-4 flex items-center rounded-full border border-neutral-500/15 p-2 transition has-checked:shadow-sm"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded-full border border-neutral-500/15 transition-all"
                            id="type-sell"
                            name="type"
                            type="radio"
                            value="sell"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="-mb-1 ml-2 cursor-pointer pe-2 text-sm text-neutral-500/30 transition-colors select-none peer-has-checked:text-white"
                          for="type-sell"
                        >
                          Want to Sell
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex justify-end"
                  >
                    <button
                      class="btn btn-destructive"
                      type="reset"
                    >
                      <span
                        class="material-symbols-outlined"
                      >
                        reset_settings
                      </span>
                      <span
                        class="-mb-0.75"
                      >
                        Reset filters
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </li>
        <li>
          <a
            aria-label="nav-filters"
            class="nav-item"
            data-discover="true"
            href="/adverts/new"
          >
            <span
              class="material-symbols-outlined"
            >
              add
            </span>
            <span
              class="-mb-0.75"
            >
              New Advert
            </span>
          </a>
        </li>
        <li>
          <a
            class="nav-item"
            href="http://localhost:3001/swagger/"
            target="_blank"
          >
            <span
              class="material-symbols-outlined"
            >
              api
            </span>
            <span
              class="-mb-0.75"
            >
              API Documentation
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    class="wrapper only:mt-8"
  >
    <h2>
      Latest Adverts
    </h2>
    <section>
      <div
        class="text-primary/50 mx-auto flex w-full max-w-sm flex-col items-center justify-center px-4"
        data-testid="empty"
      >
        <span
          class="material-symbols-outlined mb-2 !text-7xl !font-bold"
        >
          orders
        </span>
        <h3
          class="mb-2 text-lg"
        >
          No adverts... yet.
        </h3>
        <p
          class="mb-4"
        >
          Why don't you add one right now?
        </p>
        <a
          aria-label="warning-new-advert"
          class="btn btn-primary"
          data-discover="true"
          href="/adverts/new"
        >
          <span
            class="material-symbols-outlined flex items-center"
          >
            add
          </span>
          <p
            class="-mb-0.5"
          >
            New advert
          </p>
        </a>
      </div>
    </section>
  </div>
  <div
    class="fixed top-11.5 left-1/2 z-50 -translate-x-1/2"
  >
    <div
      class="alert alert-error"
      role="alert"
    >
      <div
        class="flex items-center justify-between gap-1"
      >
        <div
          class="flex items-center justify-center"
        />
        <span
          class="-mb-1"
        >
          Unauthorized
        </span>
      </div>
      <button
        aria-label="Close"
        class="flex cursor-pointer items-center justify-center rounded-lg"
        type="button"
      >
        <span
          class="sr-only"
        >
          Close
        </span>
        <span
          class="material-symbols-outlined !text-xl !font-medium"
        >
          close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`AdvertsPage > should dispatch empty warning when no adverts 1`] = `
<div>
  <nav
    class="wrapper mb-8"
  >
    <div
      class="divide-b"
    >
      <ul
        class="flex flex-col gap-4 py-4 sm:flex-row sm:items-center"
      >
        <li>
          <div
            class="popover flex items-center"
          >
            <button
              class="nav-item"
            >
              <span
                class="material-symbols-outlined"
              >
                filter_list
              </span>
              <span
                class="-mb-0.75"
              >
                Filters
              </span>
            </button>
            <div
              class="popover-menu invisible origin-top-left -translate-y-2 scale-100 transform opacity-0 transition"
            >
              <div
                class="bg-background absolute -left-18 mt-6 w-72 origin-top-left rounded-lg border border-black/15 p-4 shadow-md outline-none sm:w-98 dark:border-white/15"
                role="menu"
                tabindex="-1"
              >
                <form>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="name"
                        maxlength="80"
                        name="name"
                        placeholder="Name"
                        type="search"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="name"
                      >
                        Name
                      </label>
                    </div>
                  </div>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="min-price"
                        max="99999.99"
                        min="1.00"
                        name="price"
                        placeholder="Minimum price"
                        type="number"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="min-price"
                      >
                        Minimum price
                      </label>
                    </div>
                  </div>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="max-price"
                        max="99999.99"
                        min="1.00"
                        name="price"
                        placeholder="Maximum price"
                        type="number"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="max-price"
                      >
                        Maximum price
                      </label>
                    </div>
                  </div>
                  <div>
                    <p
                      class="mb-2 font-medium"
                    >
                      Tags:
                    </p>
                    <div
                      class="flex flex-wrap gap-x-3 gap-y-0.5"
                    />
                  </div>
                  <div>
                    <p
                      class="mb-2 font-medium"
                    >
                      Advert Type:
                    </p>
                    <div
                      class="flex flex-wrap gap-2"
                    >
                      <div
                        class="has-checked:border-primary has-checked:bg-primary bg-background mb-4 flex items-center rounded-full border border-neutral-500/15 p-2 transition has-checked:shadow-sm"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded-full border border-neutral-500/15 transition-all"
                            id="type-buy"
                            name="type"
                            type="radio"
                            value="buy"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="-mb-1 ml-2 cursor-pointer pe-2 text-sm text-neutral-500/30 transition-colors select-none peer-has-checked:text-white"
                          for="type-buy"
                        >
                          Want to Buy
                        </label>
                      </div>
                      <div
                        class="has-checked:border-primary has-checked:bg-primary bg-background mb-4 flex items-center rounded-full border border-neutral-500/15 p-2 transition has-checked:shadow-sm"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded-full border border-neutral-500/15 transition-all"
                            id="type-sell"
                            name="type"
                            type="radio"
                            value="sell"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="-mb-1 ml-2 cursor-pointer pe-2 text-sm text-neutral-500/30 transition-colors select-none peer-has-checked:text-white"
                          for="type-sell"
                        >
                          Want to Sell
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex justify-end"
                  >
                    <button
                      class="btn btn-destructive"
                      type="reset"
                    >
                      <span
                        class="material-symbols-outlined"
                      >
                        reset_settings
                      </span>
                      <span
                        class="-mb-0.75"
                      >
                        Reset filters
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </li>
        <li>
          <a
            aria-label="nav-filters"
            class="nav-item"
            data-discover="true"
            href="/adverts/new"
          >
            <span
              class="material-symbols-outlined"
            >
              add
            </span>
            <span
              class="-mb-0.75"
            >
              New Advert
            </span>
          </a>
        </li>
        <li>
          <a
            class="nav-item"
            href="http://localhost:3001/swagger/"
            target="_blank"
          >
            <span
              class="material-symbols-outlined"
            >
              api
            </span>
            <span
              class="-mb-0.75"
            >
              API Documentation
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    class="wrapper only:mt-8"
  >
    <h2>
      Latest Adverts
    </h2>
    <section>
      <div
        class="text-primary/50 mx-auto flex w-full max-w-sm flex-col items-center justify-center px-4"
        data-testid="empty"
      >
        <span
          class="material-symbols-outlined mb-2 !text-7xl !font-bold"
        >
          orders
        </span>
        <h3
          class="mb-2 text-lg"
        >
          No adverts... yet.
        </h3>
        <p
          class="mb-4"
        >
          Why don't you add one right now?
        </p>
        <a
          aria-label="warning-new-advert"
          class="btn btn-primary"
          data-discover="true"
          href="/adverts/new"
        >
          <span
            class="material-symbols-outlined flex items-center"
          >
            add
          </span>
          <p
            class="-mb-0.5"
          >
            New advert
          </p>
        </a>
      </div>
    </section>
  </div>
  <div
    class="fixed top-11.5 left-1/2 z-50 -translate-x-1/2"
  />
</div>
`;

exports[`AdvertsPage > should dispatch filtered adverts 1`] = `
<div>
  <nav
    class="wrapper mb-8"
  >
    <div
      class="divide-b"
    >
      <ul
        class="flex flex-col gap-4 py-4 sm:flex-row sm:items-center"
      >
        <li>
          <div
            class="popover flex items-center"
          >
            <button
              class="nav-item"
            >
              <span
                class="material-symbols-outlined"
              >
                filter_list
              </span>
              <span
                class="-mb-0.75"
              >
                Filters
              </span>
            </button>
            <div
              class="popover-menu invisible origin-top-left -translate-y-2 scale-100 transform opacity-0 transition"
            >
              <div
                class="bg-background absolute -left-18 mt-6 w-72 origin-top-left rounded-lg border border-black/15 p-4 shadow-md outline-none sm:w-98 dark:border-white/15"
                role="menu"
                tabindex="-1"
              >
                <form>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="name"
                        maxlength="80"
                        name="name"
                        placeholder="Name"
                        type="search"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="name"
                      >
                        Name
                      </label>
                    </div>
                  </div>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="min-price"
                        max="99999.99"
                        min="1.00"
                        name="price"
                        placeholder="Minimum price"
                        type="number"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="min-price"
                      >
                        Minimum price
                      </label>
                    </div>
                  </div>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="max-price"
                        max="99999.99"
                        min="1.00"
                        name="price"
                        placeholder="Maximum price"
                        type="number"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="max-price"
                      >
                        Maximum price
                      </label>
                    </div>
                  </div>
                  <div>
                    <p
                      class="mb-2 font-medium"
                    >
                      Tags:
                    </p>
                    <div
                      class="flex flex-wrap gap-x-3 gap-y-0.5"
                    >
                      <div
                        class="mb-4 flex items-center"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            aria-describedby="tags-help"
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded border border-neutral-500/15 transition-all checked:shadow-sm"
                            id="work"
                            name="tag"
                            type="checkbox"
                            value="work"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="peer-has-checked:text-primary -mb-1 ml-2 cursor-pointer text-sm text-neutral-500/30 transition-colors select-none"
                          for="work"
                        >
                          work
                        </label>
                      </div>
                      <div
                        class="mb-4 flex items-center"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            aria-describedby="tags-help"
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded border border-neutral-500/15 transition-all checked:shadow-sm"
                            id="lifestyle"
                            name="tag"
                            type="checkbox"
                            value="lifestyle"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="peer-has-checked:text-primary -mb-1 ml-2 cursor-pointer text-sm text-neutral-500/30 transition-colors select-none"
                          for="lifestyle"
                        >
                          lifestyle
                        </label>
                      </div>
                    </div>
                  </div>
                  <div>
                    <p
                      class="mb-2 font-medium"
                    >
                      Advert Type:
                    </p>
                    <div
                      class="flex flex-wrap gap-2"
                    >
                      <div
                        class="has-checked:border-primary has-checked:bg-primary bg-background mb-4 flex items-center rounded-full border border-neutral-500/15 p-2 transition has-checked:shadow-sm"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded-full border border-neutral-500/15 transition-all"
                            id="type-buy"
                            name="type"
                            type="radio"
                            value="buy"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="-mb-1 ml-2 cursor-pointer pe-2 text-sm text-neutral-500/30 transition-colors select-none peer-has-checked:text-white"
                          for="type-buy"
                        >
                          Want to Buy
                        </label>
                      </div>
                      <div
                        class="has-checked:border-primary has-checked:bg-primary bg-background mb-4 flex items-center rounded-full border border-neutral-500/15 p-2 transition has-checked:shadow-sm"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded-full border border-neutral-500/15 transition-all"
                            id="type-sell"
                            name="type"
                            type="radio"
                            value="sell"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="-mb-1 ml-2 cursor-pointer pe-2 text-sm text-neutral-500/30 transition-colors select-none peer-has-checked:text-white"
                          for="type-sell"
                        >
                          Want to Sell
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex justify-end"
                  >
                    <button
                      class="btn btn-destructive"
                      type="reset"
                    >
                      <span
                        class="material-symbols-outlined"
                      >
                        reset_settings
                      </span>
                      <span
                        class="-mb-0.75"
                      >
                        Reset filters
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </li>
        <li>
          <a
            aria-label="nav-filters"
            class="nav-item"
            data-discover="true"
            href="/adverts/new"
          >
            <span
              class="material-symbols-outlined"
            >
              add
            </span>
            <span
              class="-mb-0.75"
            >
              New Advert
            </span>
          </a>
        </li>
        <li>
          <a
            class="nav-item"
            href="http://localhost:3001/swagger/"
            target="_blank"
          >
            <span
              class="material-symbols-outlined"
            >
              api
            </span>
            <span
              class="-mb-0.75"
            >
              API Documentation
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    class="wrapper only:mt-8"
  >
    <h2>
      Latest Adverts
    </h2>
    <ul
      class="mx-auto grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3"
    >
      <li>
        <a
          data-discover="true"
          href="/adverts/1"
        >
          <div
            class="group border-primary/15 bg-background overflow-hidden rounded-lg border transition hover:scale-105 hover:shadow-xl"
          >
            <div
              class="relative"
            >
              <img
                alt="Product image"
                class="h-60 w-full object-cover transition-transform"
                src="/src/assets/placeholder.webp"
              />
              <div
                class="absolute top-3 right-3"
              >
                <span
                  class="ads-type"
                >
                  WANT TO BUY
                </span>
              </div>
            </div>
            <div
              class="p-5"
            >
              <span
                class="mb-2 flex text-lg font-bold text-gray-900 dark:text-gray-100"
              >
                advert 1
              </span>
              <div
                class="mb-2 flex flex-wrap gap-2"
              >
                <span
                  class="text-primary text-sm"
                >
                  #
                  work
                </span>
              </div>
              <div
                class="flex items-center justify-between"
              >
                <h3
                  class="!m-0 text-lg font-semibold text-teal-600"
                >
                  $
                  5.00
                </h3>
              </div>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          data-discover="true"
          href="/adverts/2"
        >
          <div
            class="group border-primary/15 bg-background overflow-hidden rounded-lg border transition hover:scale-105 hover:shadow-xl"
          >
            <div
              class="relative"
            >
              <img
                alt="Product image"
                class="h-60 w-full object-cover transition-transform"
                src="/src/assets/placeholder.webp"
              />
              <div
                class="absolute top-3 right-3"
              >
                <span
                  class="ads-type"
                >
                  WANT TO SELL
                </span>
              </div>
            </div>
            <div
              class="p-5"
            >
              <span
                class="mb-2 flex text-lg font-bold text-gray-900 dark:text-gray-100"
              >
                advert 2
              </span>
              <div
                class="mb-2 flex flex-wrap gap-2"
              >
                <span
                  class="text-primary text-sm"
                >
                  #
                  work
                </span>
                <span
                  class="text-primary text-sm"
                >
                  #
                  lifestyle
                </span>
              </div>
              <div
                class="flex items-center justify-between"
              >
                <h3
                  class="!m-0 text-lg font-semibold text-teal-600"
                >
                  $
                  10.00
                </h3>
              </div>
            </div>
          </div>
        </a>
      </li>
    </ul>
  </div>
  <div
    class="fixed top-11.5 left-1/2 z-50 -translate-x-1/2"
  />
</div>
`;

exports[`AdvertsPage > should dispatch loader when pending 1`] = `
<div>
  <nav
    class="wrapper mb-8"
  >
    <div
      class="divide-b"
    >
      <ul
        class="flex flex-col gap-4 py-4 sm:flex-row sm:items-center"
      >
        <li>
          <div
            class="popover flex items-center"
          >
            <button
              class="nav-item"
            >
              <span
                class="material-symbols-outlined"
              >
                filter_list
              </span>
              <span
                class="-mb-0.75"
              >
                Filters
              </span>
            </button>
            <div
              class="popover-menu invisible origin-top-left -translate-y-2 scale-100 transform opacity-0 transition"
            >
              <div
                class="bg-background absolute -left-18 mt-6 w-72 origin-top-left rounded-lg border border-black/15 p-4 shadow-md outline-none sm:w-98 dark:border-white/15"
                role="menu"
                tabindex="-1"
              >
                <form>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="name"
                        maxlength="80"
                        name="name"
                        placeholder="Name"
                        type="search"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="name"
                      >
                        Name
                      </label>
                    </div>
                  </div>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="min-price"
                        max="99999.99"
                        min="1.00"
                        name="price"
                        placeholder="Minimum price"
                        type="number"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="min-price"
                      >
                        Minimum price
                      </label>
                    </div>
                  </div>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="max-price"
                        max="99999.99"
                        min="1.00"
                        name="price"
                        placeholder="Maximum price"
                        type="number"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="max-price"
                      >
                        Maximum price
                      </label>
                    </div>
                  </div>
                  <div>
                    <p
                      class="mb-2 font-medium"
                    >
                      Tags:
                    </p>
                    <div
                      class="flex flex-wrap gap-x-3 gap-y-0.5"
                    />
                  </div>
                  <div>
                    <p
                      class="mb-2 font-medium"
                    >
                      Advert Type:
                    </p>
                    <div
                      class="flex flex-wrap gap-2"
                    >
                      <div
                        class="has-checked:border-primary has-checked:bg-primary bg-background mb-4 flex items-center rounded-full border border-neutral-500/15 p-2 transition has-checked:shadow-sm"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded-full border border-neutral-500/15 transition-all"
                            id="type-buy"
                            name="type"
                            type="radio"
                            value="buy"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="-mb-1 ml-2 cursor-pointer pe-2 text-sm text-neutral-500/30 transition-colors select-none peer-has-checked:text-white"
                          for="type-buy"
                        >
                          Want to Buy
                        </label>
                      </div>
                      <div
                        class="has-checked:border-primary has-checked:bg-primary bg-background mb-4 flex items-center rounded-full border border-neutral-500/15 p-2 transition has-checked:shadow-sm"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded-full border border-neutral-500/15 transition-all"
                            id="type-sell"
                            name="type"
                            type="radio"
                            value="sell"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="-mb-1 ml-2 cursor-pointer pe-2 text-sm text-neutral-500/30 transition-colors select-none peer-has-checked:text-white"
                          for="type-sell"
                        >
                          Want to Sell
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex justify-end"
                  >
                    <button
                      class="btn btn-destructive"
                      type="reset"
                    >
                      <span
                        class="material-symbols-outlined"
                      >
                        reset_settings
                      </span>
                      <span
                        class="-mb-0.75"
                      >
                        Reset filters
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </li>
        <li>
          <a
            aria-label="nav-filters"
            class="nav-item"
            data-discover="true"
            href="/adverts/new"
          >
            <span
              class="material-symbols-outlined"
            >
              add
            </span>
            <span
              class="-mb-0.75"
            >
              New Advert
            </span>
          </a>
        </li>
        <li>
          <a
            class="nav-item"
            href="http://localhost:3001/swagger/"
            target="_blank"
          >
            <span
              class="material-symbols-outlined"
            >
              api
            </span>
            <span
              class="-mb-0.75"
            >
              API Documentation
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    class="wrapper only:mt-8"
  >
    <h2>
      Latest Adverts
    </h2>
    <div
      class="bg-background fixed top-0 left-0 z-999 block h-full w-full"
    >
      <div
        class="absolute top-2/4 left-1/2 -translate-x-1/2 -translate-y-1/2"
        role="status"
      >
        <svg
          aria-hidden="true"
          class="inline h-18 w-18 animate-spin"
          fill="none"
          viewBox="0 0 100 101"
          xmlns="http://www.w3.org/2000/svg"
        >
          <lineargradient
            id="gradient"
            x2="1"
            y2="1"
          >
            <stop
              offset="0%"
              stop-color="#49c8ff"
            />
            <stop
              offset="100%"
              stop-color="#bd34fe"
            />
          </lineargradient>
          <path
            d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
            fill="url(#gradient)"
          />
          <path
            d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
            fill="currentFill"
          />
        </svg>
        <span
          class="sr-only"
        >
          Loading...
        </span>
      </div>
    </div>
  </div>
  <div
    class="fixed top-11.5 left-1/2 z-50 -translate-x-1/2"
  />
</div>
`;

exports[`AdvertsPage > should dispatch not found warning when filters exclude all advert 1`] = `
<div>
  <nav
    class="wrapper mb-8"
  >
    <div
      class="divide-b"
    >
      <ul
        class="flex flex-col gap-4 py-4 sm:flex-row sm:items-center"
      >
        <li>
          <div
            class="popover flex items-center"
          >
            <button
              class="nav-item"
            >
              <span
                class="material-symbols-outlined"
              >
                filter_list
              </span>
              <span
                class="-mb-0.75"
              >
                Filters
              </span>
            </button>
            <div
              class="popover-menu invisible origin-top-left -translate-y-2 scale-100 transform opacity-0 transition"
            >
              <div
                class="bg-background absolute -left-18 mt-6 w-72 origin-top-left rounded-lg border border-black/15 p-4 shadow-md outline-none sm:w-98 dark:border-white/15"
                role="menu"
                tabindex="-1"
              >
                <form>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="name"
                        maxlength="80"
                        name="name"
                        placeholder="Name"
                        type="search"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="name"
                      >
                        Name
                      </label>
                    </div>
                  </div>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="min-price"
                        max="99999.99"
                        min="1.00"
                        name="price"
                        placeholder="Minimum price"
                        type="number"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="min-price"
                      >
                        Minimum price
                      </label>
                    </div>
                  </div>
                  <div
                    class="mb-4 w-full max-w-sm min-w-[200px]"
                  >
                    <div
                      class="relative"
                    >
                      <input
                        autocomplete="off"
                        class="peer ease text-primary focus:border-primary w-full rounded-md border border-neutral-500/15 bg-transparent px-4 py-3 transition placeholder:text-transparent focus:shadow-sm focus:outline-none"
                        id="max-price"
                        max="99999.99"
                        min="1.00"
                        name="price"
                        placeholder="Maximum price"
                        type="number"
                      />
                      <label
                        class="peer-focus:text-primary bg-background pointer-events-none absolute top-3.5 left-2.5 origin-left transform cursor-text px-1 text-neutral-500/30 transition-all peer-not-placeholder-shown:-top-2.5 peer-not-placeholder-shown:left-2.5 peer-not-placeholder-shown:scale-90 peer-focus:-top-1.5 peer-focus:left-2.5 peer-focus:scale-90 peer-focus:text-xs"
                        for="max-price"
                      >
                        Maximum price
                      </label>
                    </div>
                  </div>
                  <div>
                    <p
                      class="mb-2 font-medium"
                    >
                      Tags:
                    </p>
                    <div
                      class="flex flex-wrap gap-x-3 gap-y-0.5"
                    />
                  </div>
                  <div>
                    <p
                      class="mb-2 font-medium"
                    >
                      Advert Type:
                    </p>
                    <div
                      class="flex flex-wrap gap-2"
                    >
                      <div
                        class="has-checked:border-primary has-checked:bg-primary bg-background mb-4 flex items-center rounded-full border border-neutral-500/15 p-2 transition has-checked:shadow-sm"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded-full border border-neutral-500/15 transition-all"
                            id="type-buy"
                            name="type"
                            type="radio"
                            value="buy"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="-mb-1 ml-2 cursor-pointer pe-2 text-sm text-neutral-500/30 transition-colors select-none peer-has-checked:text-white"
                          for="type-buy"
                        >
                          Want to Buy
                        </label>
                      </div>
                      <div
                        class="has-checked:border-primary has-checked:bg-primary bg-background mb-4 flex items-center rounded-full border border-neutral-500/15 p-2 transition has-checked:shadow-sm"
                      >
                        <div
                          class="peer relative flex cursor-pointer items-center"
                        >
                          <input
                            class="peer checked:border-primary checked:bg-primary h-5 w-5 cursor-pointer appearance-none rounded-full border border-neutral-500/15 transition-all"
                            id="type-sell"
                            name="type"
                            type="radio"
                            value="sell"
                          />
                          <span
                            class="pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transform text-white opacity-0 peer-checked:opacity-100"
                          >
                            <svg
                              class="h-3.5 w-3.5"
                              fill="currentColor"
                              stroke="currentColor"
                              stroke-width="1"
                              viewBox="0 0 20 20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <label
                          class="-mb-1 ml-2 cursor-pointer pe-2 text-sm text-neutral-500/30 transition-colors select-none peer-has-checked:text-white"
                          for="type-sell"
                        >
                          Want to Sell
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex justify-end"
                  >
                    <button
                      class="btn btn-destructive"
                      type="reset"
                    >
                      <span
                        class="material-symbols-outlined"
                      >
                        reset_settings
                      </span>
                      <span
                        class="-mb-0.75"
                      >
                        Reset filters
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </li>
        <li>
          <a
            aria-label="nav-filters"
            class="nav-item"
            data-discover="true"
            href="/adverts/new"
          >
            <span
              class="material-symbols-outlined"
            >
              add
            </span>
            <span
              class="-mb-0.75"
            >
              New Advert
            </span>
          </a>
        </li>
        <li>
          <a
            class="nav-item"
            href="http://localhost:3001/swagger/"
            target="_blank"
          >
            <span
              class="material-symbols-outlined"
            >
              api
            </span>
            <span
              class="-mb-0.75"
            >
              API Documentation
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    class="wrapper only:mt-8"
  >
    <h2>
      Latest Adverts
    </h2>
    <ul
      class="mx-auto grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3"
    >
      <li>
        <a
          data-discover="true"
          href="/adverts/1"
        >
          <div
            class="group border-primary/15 bg-background overflow-hidden rounded-lg border transition hover:scale-105 hover:shadow-xl"
          >
            <div
              class="relative"
            >
              <img
                alt="Product image"
                class="h-60 w-full object-cover transition-transform"
                src="/src/assets/placeholder.webp"
              />
              <div
                class="absolute top-3 right-3"
              >
                <span
                  class="ads-type"
                >
                  WANT TO BUY
                </span>
              </div>
            </div>
            <div
              class="p-5"
            >
              <span
                class="mb-2 flex text-lg font-bold text-gray-900 dark:text-gray-100"
              >
                advert 1
              </span>
              <div
                class="mb-2 flex flex-wrap gap-2"
              />
              <div
                class="flex items-center justify-between"
              >
                <h3
                  class="!m-0 text-lg font-semibold text-teal-600"
                >
                  $
                  0.00
                </h3>
              </div>
            </div>
          </div>
        </a>
      </li>
    </ul>
  </div>
  <div
    class="fixed top-11.5 left-1/2 z-50 -translate-x-1/2"
  />
</div>
`;
